--- a/betRef/betRef_3.html
+++ b/betRef/betRef_3.html
@@ -1,6 +1,6 @@
 <div class="contBox-min">
     <!-- 新聞內頁 -->
-    <div class="newsRef_box">
+    <div class="newsRef_box" id="newsCnt">
         <div class="newsRef_cnt">
 
             <!-- === 文章標題 === -->
@@ -81,19 +81,92 @@
             </div>
 
         </div>
-        <div class="newsRef_menu">
-            <div class="newsRef_hot" id="newsRef_hot">
-                <div class="mainMsg-title">Tin hot</div>
-                <ul></ul>
-            </div>
-            <div class="newsRef_imp" id="newsRef_imp">
+
+         <div class="newsCnt_menu">
+            <div>
                 <div class="mainMsg-title">Tin quan trọng</div>
-                <ul></ul>
+                <div class="newsCnt_scroll">
+                    <ul>
+                        <template v-for="(item,index) in newsMenu.newsImp">
+                            <li v-if="localNum != index+1">
+                                <a :href="reHref(false,index)">
+                                    <div class="img" :style="getbgi(item.menuImg)">
+                                    </div>
+                                    <p>{{item.title}}</p>
+                                </a>
+                            </li>
+                        </template>
+                    </ul>
+                </div>
+            </div>
+            <div>
+                <div class="mainMsg-title">Tin hot</div>
+                <div class="newsCnt_scroll">
+                    <ul>
+                        <template v-for="(item,index) in newsMenu.newsHot">
+                            <li>
+                                <a :href="reHref(true,index)">
+                                    <div class="img" :style="getbgi(item.img)"></div>
+                                    <p>{{item.title}}</p>
+                                </a>
+                            </li>
+                        </template>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
 </div>
 
-<!-- ========================================= -->
-<script src="js/index.js"></script>
-<script src="js/befRef.js"></script>
+<script>
+    Vue.createApp({
+        data() { 
+            return {
+                newsMenu: {
+                    newsHot: '',
+                    newsImp: betList.list,
+                },
+                localNum: 1,
+            };
+        },
+        methods: {
+            getbgi(data) {
+                return `background-image: url(${data})`;
+            },
+            reHref(hot, index) {
+                if (hot) {
+                    return `#/home/news?list=${index+6}`
+                } else {
+                    return `#/betRef?p=${index+1}`
+                }
+            },
+            getMenu() {
+                let self = this;
+                let chReady = [false];
+                self.localNum = sessionStorage.getItem('new_betRef');
+
+                function ready() {
+                    if (chReady[0] ) {
+                        indexVue.onLoad = false;
+                    }
+                }
+
+                $.ajax({
+                    url: "https://vnc88.awgstudio.com/api/homenews/list",
+                    dataType: "json",
+                    success: function(data) {
+                        self.newsMenu.newsHot = data;
+                        self.$nextTick(function() {
+                            chReady[0] = true;
+                            ready();
+                        })
+                    },
+                });
+            }
+        },
+        mounted() {
+            this.getMenu();
+            indexVue.onLoad = true;
+        },
+    }).mount("#newsCnt");
+</script>
