--- a/index.html
+++ b/index.html
@@ -935,7 +935,7 @@
                 if (winW >= 1263) {
                     indexBox.style.paddingTop = '0';
                 } else {
-                    indexBox.style.paddingTop = `${hdH}px 0 0`;
+                    indexBox.style.paddingTop = `${hdH}px`;
                 }
             },
 
