--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                             <div class="signIn_close" @click="signInOpen = false,reset()"></div>
                             <div class="title">Đăng nhập</div>
 
-                            <form @submit.prevent="ckSignIn()">
+                            <div @submit.prevent="ckSignIn()">
                                 <div class="signIn_ipt">
                                     <!-- 用戶帳號 -->
                                     <div class="signIn_account">
@@ -137,7 +137,7 @@
                                         <div class="btn_cnt">Đăng kí</div>
                                     </div>
                                 </div>
-                            </form>
+                            </div>
                         </div>
 
                         <!-- 會員訊息 / 登出 -->
