--- a/index.html
+++ b/index.html
@@ -82,62 +82,7 @@
                             <div class="signIn_close" @click="signInOpen = false,reset()"></div>
                             <div class="title">Đăng nhập</div>
 
-                            <form @submit.prevent="ckSignIn()">
-                                <div class="signIn_ipt">
-                                    <!-- 用戶帳號 -->
-                                    <div class="signIn_account">
-                                        <span class="signIn_minTitle">Tài khoản</span>
-                                        <div class="signIn_iptBox">
-                                            <div class="signIn_minCnt">
-                                                <label data-title="Tài khoản">  
-                                                    <input type="email" placeholder="Tài khoản" v-model="signInMbr.email" required>  
-                                                </label>
-                                            </div>
-                                            <p class="errorTxt" v-if="errorCode.notEmail">Email không tồn tại</p>
-                                        </div>
-                                    </div>
-
-                                    <!-- 密碼 / 忘記密碼 -->
-                                    <div class="signIn_forget">
-                                        <span class="signIn_minTitle">Mật khẩu</span>
-                                        <div class="signIn_iptBox">
-                                            <div class="signIn_minCnt">
-                                                <label>
-                                                    <input type="password" placeholder="Mật khẩu" v-model="signInMbr.pwd" required  autocomplete="on">
-                                                </label>
-                                                <div class="btn_linear hd_forget" @click="forgetLog()">
-                                                    <div class="btn_cnt"></div>
-                                                </div>
-                                            </div>
-                                            <p class="errorTxt" v-if="errorCode.pwd">Sai mật khẩu</p>
-                                        </div>
-                                    </div>
-                                    <!-- 驗證碼 -->
-                                    <div class="signIn_code">
-                                        <span class="signIn_minTitle">Mã xác minh</span>
-                                        <div class="signIn_codeBox">
-                                            <div class="signIn_minCnt">
-                                                <label>
-                                                    <input type="text" placeholder="Xác minh"  minlength="4" maxlength="4" pattern="[0-9]{4,4}" v-model="signInMbr.code" required>
-                                                </label>
-                                                <div class="nbCode" @click="verify('mainVerify')">
-                                                    <canvas id='mainVerify'></canvas>
-                                                </div>
-                                            </div>
-                                            <p class="errorTxt" v-if="errorCode.verify">Sai mã xác nhận</p>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="signIn_btn">
-                                    <div class="btn_linear_c2 btn">
-                                        <button class="btn_cnt">Đăng nhập</button>
-                                    </div>
-                                    <div class="btn_linear_c3 btn" @click="regdLog()">
-                                        <div class="btn_cnt">Đăng kí</div>
-                                    </div>
-                                </div>
-                            </form>
+                            <input type="text" name="" id="">
                         </div>
 
                         <!-- 會員訊息 / 登出 -->
